<resources>
    <string name="app_name">ListInfo</string>
    <string name="cpf_text">Informe seu CPF</string>
    <string name="invalid_cpf_text">CPF inválido</string>
    <string name="next_button_label">Próximo</string>

    <string name="get_int_button">Entrar</string>
    <string name="password_text_error">Senha ou usuário inválido</string>
    <string name="password_title">Digite a senha</string>

    <string name="error_connection">Não foi possível se conectar ao servidor</string>
    <string name="error_unauthorized">Sessão expirada</string>
    <string name="error_server">Não foi possível completar sua solicitação</string>
    <string name="error_server_retry">Não foi possível completar sua solicitação. Tente novamente.</string>
    <string name="succes_mgs">Sucesso!</string>

</resources>
