<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
                name="loading"
                type="Boolean" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_cpf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".LogInActivity">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_start"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="@dimen/base_constraint_guide_spacing" />

        <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_end"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintGuide_end="@dimen/base_constraint_guide_spacing" />

        <TextView
                android:id="@+id/text_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:text="@string/password_title"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
                android:id="@+id/input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_margin_top"
                android:background="@android:color/transparent"
                android:inputType="textPassword"
                android:textSize="@dimen/edit_text_size"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/text_password" />

        <TextView
                android:id="@+id/text_password_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/password_text_error"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/invalid_cpf_text_size"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@id/guide_end"
                app:layout_constraintStart_toStartOf="@id/guide_start"
                app:layout_constraintTop_toBottomOf="@+id/input_password"
                tools:visibility="visible" />

        <Button
                android:id="@+id/button_get_in"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/get_int_button"
                android:visibility="@{safeUnbox(loading) ? View.INVISIBLE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
